# LZW-Compression-Engine

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  test.sh
src/: CircularQueue.cpp  CircularQueue.h  Compressor.cpp  Cqueue.cpp  Cqueue.h  Decoder.cpp  Decoder.h  Decompressor.cpp  Encoder.cpp  Encoder.h  LzwDecoder.cpp  LzwDecoder.h  LzwEncoder.cpp  LzwEncoder.h
test/: icon.png.z  poem.txt  poem.txt.z  test.sh
test_input/: book.txt  book.txt.z
